# MCP-Client-Server-MongoDB

./: .env  README.md  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt
