[project]
name = "task10-mongodb-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-api-core>=2.25.1",
    "google-genai>=1.22.0",
    "google-generativeai>=0.8.5",
    "mcp>=1.10.0",
    "motor>=3.7.1",
]
